# trade-python

./: .gitignore  PYTHON_SERVER_GUIDE.md  README.md  add_non_tariff_info_migration.sql  convert_swagger_to_markdown.py  generate_swagger_docs.py  generate_swagger_html.py  main.py  pyproject.toml  run_migration.py  simple_swagger_extractor.py  test_422_error.py  test_hscode.py  test_import.py  test_parallel_processing.py  test_request_logging.py  trade-python-java-integration-guide.html  구현계획.md  할 일 .md
app/: main.py
app/chains/: __init__.py  prompt_chains.py
app/core/: config.py  llm_provider.py  logging_config.py
app/db/: crud.py  session.py
docs/: 01_Context7_구현_난관_분석.md  02_기술적_상세_설계.md  03_JSON_응답_구조_상세_설계.md  04_구현_일정_및_마일스톤.md  AI 기반 무역 규제 레이더 플랫폼 데이터베이스 스키마 v6.3.md  AI 기반 무역 규제 레이더 플랫폼 요구사항 정의서 v6.1.md  HSCode 분류 정보.md  Redis 데이터 구조.md  chat 의사코드 로직.ts  chat_endpoint_response_formats.md  detail_page_info_ddl.sql  hscode_implementation_guide.md  openapi_schema.json  openapi_schema_resolved.json  sse_event_mapping.md  swagger_documentation.md  swagger_schema.json  swagger_ui.html  검색하여 벡터 DB에 저장 구현 계획.md  고급 프롬프트 엔지니어링 기법.md  스키마.md
plan/: chat_endpoint_implementation_plan.md  run_monitoring_implementation_plan.md
reflection/: 20240727_chat_history_bug_fix_report.md  20240728_chat_history_async_bug_fix_report.md  20240728_chat_service_redundant_history_saving_fix.md  20250704_chat_messages_and_session_title_implementation.md  20250704_chat_messages_message_type_constraint_fix.md  20250704_chat_session_commit_issue_fix.md
tests/: conftest.py
(+33 files in other folders)
