[project]
name = "trade-python"
version = "0.1.0"
description = "LangChain + FastAPI 기반 Claude AI 웹 검색 서비스"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.1.1",
    # AI & LangChain
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.14",
    "langchain-openai",
    "langchain-community>=0.3.26",
    "langchain-postgres>=0.0.12",
    "langchain-voyageai",
    "voyageai>=0.2.2",
    # Database
    "asyncpg>=0.29.0",
    "psycopg[binary,pool]>=3.2.9",
    "pgvector>=0.2.5",
    "sqlalchemy>=2.0.41",
    # Utilities
    "typing-extensions>=4.12.0",
    "sse-starlette>=2.3.6",
    "structlog>=25.4.0",
    "asgi-correlation-id[uuid]>=4.3.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pytest-mock>=3.14.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
# pytest-asyncio 설정: event loop 충돌 해결
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "function"
